--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   width: 60%;
 }
 
+.icon{
+  color: red;
+}
+
 .search-input-wrap{
   display: flex;
   align-items: center;
@@ -24,11 +28,12 @@
   margin: 0 6px;
   padding: 4px 6px;
   width: 100%;
+  font-size: 1rem;
 }
 
 .clear{
   text-decoration: underline;
-  font-size: .8rem;
+  /* font-size: .8rem; */
 }
 
 .category{
@@ -47,25 +52,25 @@
 }
 
 .category-item{
-  font-size: .8rem;
   display: flex;
   align-items: center;
   gap: 6px;
   padding: 0 8px;
   padding-bottom: 2px;
+  text-transform: capitalize;
 }
 
 .category-item-active{
   color: var(--text-color);
   border-bottom: 2px solid black;
+  font-weight: bold;
 }
-
-
 
 .category-item-count{
   padding: 2px 6px;
   border-radius: 4px;
   background-color: var(--light-bg);
-  font-size: .6rem;
+  color: var(--muted-text);
+  font-size: .9rem;
   line-height: 1;
 }
