--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,6 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -73,7 +72,7 @@ input,
 textarea,
 select,
 button {
-  font-family: inherit; /* take from body */
+  font-family: inherit; 
 }
 
 a{
