--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,16 @@
   display: flex;
   align-items: center;
   gap: 6px;
-  padding: 0 8px;
-  padding-bottom: 2px;
+  padding: 6px 10px;
   text-transform: capitalize;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.category-item:hover{
+  background-color: var(--body-bg);
 }
 
 .category-item-active{
