--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -1,6 +1,6 @@
 .list{
-  padding-top: 10px;
-  padding-bottom: 10px;
+  /* padding-top: 10px;
+  padding-bottom: 10px; */
 }
 .listItem{
   padding: 0px 15px;
