--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 20px;
 }
 
 .search-box{
   border-radius: 10px;
-  padding: 10px 0;
   background-color: white;
   box-shadow: 0px 0px 10px #00000074;
-  width: 60%;
+  max-width: 60%;
+  width: 100%;
+  /* max-width: 1460px; */
+  /* margin: 0 20px; */
+  /* padding: 40px 0; */
 }
 
 .icon{
@@ -20,13 +24,11 @@
 .search-input-wrap{
   display: flex;
   align-items: center;
-  padding: 10px 15px;
+  padding: 0 35px;
 }
 
 .search-input{
   border: none;
-  margin: 0 6px;
-  padding: 4px 6px;
   width: 100%;
   font-size: 1rem;
 }
@@ -38,29 +40,40 @@
 
 .category{
   position: relative;
-  border-bottom: 2px solid var(--light-bg);
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 15px;
   color: var(--muted-text);
+}
+
+.category::before{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--light-bg);
+  z-index: 1;
 }
 
 .category-list{
     display: flex;
     list-style: none;
-    gap: 10px;
 }
 
 .category-item{
+  position: relative;
   display: flex;
   align-items: center;
   gap: 6px;
-  padding: 6px 10px;
+  padding: 6px;
   text-transform: capitalize;
   background-color: transparent;
-  border: none;
   cursor: pointer;
-  border-radius: 4px;
+  color: var(--muted-text);
+  border: none;
 }
 
 .category-item:hover{
@@ -69,15 +82,27 @@
 
 .category-item-active{
   color: var(--text-color);
-  border-bottom: 2px solid black;
-  font-weight: bold;
+}
+
+.category-item-active:after{
+  content: "";
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--text-color);
+  z-index: 1;
+
 }
 
 .category-item-count{
-  padding: 2px 6px;
   border-radius: 4px;
   background-color: var(--light-bg);
   color: var(--muted-text);
-  font-size: .9rem;
-  line-height: 1;
+  font-size: 14px;
+  line-height: 18px;
+  height: 18px;
+  width: 18px;
 }
