--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ body{
   line-height: 1.6;
   background-color: var(--body-bg);
   color: var(--text-color);
+  box-sizing: border-box;
 }
 
 h1,h2,h3,h4,h5,h6{
