--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@
   border-radius: 10px;
   background-color: white;
   box-shadow: 0px 0px 10px #00000074;
-  max-width: 60%;
   width: 100%;
-  /* max-width: 1460px; */
+  max-width: 1460px;
+  padding: 20px 0;
   /* margin: 0 20px; */
   /* padding: 40px 0; */
 }
@@ -24,13 +24,13 @@
 .search-input-wrap{
   display: flex;
   align-items: center;
-  padding: 0 35px;
+  padding: 0 20px;
+  gap: 10px;
 }
 
 .search-input{
   border: none;
   width: 100%;
-  font-size: 1rem;
 }
 
 .clear{
