--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
  --text-color : #0f0f0f;
  --muted-text : #9a9a9a;
  --light-bg : #f2f2f2;
+  --mobile: 768px;
+  --tablet: 992px;
+  --desktop: 1200px;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -30,8 +33,8 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	/* font-size: 100%; */
-	/* font: inherit; */
+	font-size: 100%;
+	font: inherit;
 	vertical-align: baseline;
 }
 article, aside, details, figcaption, figure, 
@@ -74,12 +77,7 @@ textarea,
 select,
 button {
   font-family: inherit; 
-}
-
-@media (max-width: 768px) {
-  input{
-    font-size: .9rem;
-  }
+  font-size: inherit;
 }
 
 a{
@@ -88,11 +86,16 @@ a{
 
 html{
     box-sizing: border-box;
+    font-size: 10px;
+}
+
+body{
+  font-size: 1.6rem; 
 }
 
 @media (max-width: 768px) {
   body{
-    font-size: 1rem; 
+    font-size: 1.4rem; 
   }
 }
 
@@ -111,10 +114,24 @@ html{
   border: 1px solid var(--muted-text);
 }
 
-.icon {
-  line-height: 1;
-}
-
 .color-muted{
   color: var(--muted-text);
+}
+
+.icon {
+  font-size: 2.5rem; 
+  color: var(--muted-text);
+}
+
+.icon-sm{
+  font-size: 1.6rem
+}
+
+@media (max-width: 768px ) {
+  .icon-sm{
+    font-size: 1.4rem
+  }
+  .icon {
+    font-size: 2rem; 
+  } 
 }
