--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,19 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  /* align-items: center; */
   padding: 0 20px;
 }
 
 .search-box{
-  border-radius: 10px;
+  border-radius: 0.625rem;
   background-color: white;
   box-shadow: 0px 0px 10px #00000074;
-  width: 100%;
-  max-width: 1460px;
+  /* width: 100%;
+  max-width: 1460px; */
   padding: 15px 0;
+  width: clamp(400px, 60% ,800px);
   /* margin: 0 20px; */
   /* padding: 40px 0; */
 }
