--- a/src/App.css
+++ b/src/App.css
@@ -2,120 +2,15 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: start;
-  /* align-items: center; */
+  align-items: center;
   padding: 0 20px;
 }
 
 .search-box{
-  border-radius: 0.625rem;
+  border-radius: .8rem;
   background-color: white;
   box-shadow: 0px 0px 10px #00000074;
-  /* width: 100%;
-  max-width: 1460px; */
-  padding: 15px 0;
-  width: clamp(400px, 60% ,800px);
-  /* margin: 0 20px; */
-  /* padding: 40px 0; */
-}
-
-.search-input-wrap{
-  display: flex;
-  align-items: center;
-  padding: 0 15px;
-  margin-bottom: 5px;
-  gap: 10px;
-}
-
-.search-input{
-  border: none;
-  width: 100%;
-  padding: 0;
-  flex: 1;
-}
-
-.search-input:focus {
-  outline: none; /* removes the browser's default outline */
-}
-
-.clear{
-  text-decoration: underline;
-  /* font-size: .8rem; */
-}
-
-.category{
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 15px;
-  color: var(--muted-text);
-  gap: 10px;
-}
-
-.category::before{
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: var(--light-bg);
-  z-index: 1;
-}
-
-.category-list{
-    display: flex;
-    list-style: none;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    -ms-overflow-style: none;    /* IE + Edge (old) */
-    scrollbar-width: none;       /* Firefox */
-}
-.category-list::-webkit-scrollbar {
-  display: none;               /* Chrome, Safari, Opera */
-}
-
-.category-item{
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  padding: 10px;
-  text-transform: capitalize;
-  background-color: transparent;
-  cursor: pointer;
-  color: var(--muted-text);
-  border: none;
-}
-
-.category-item:hover{
-  background-color: var(--body-bg);
-}
-
-.category-item-active{
-  color: var(--text-color);
-}
-
-.category-item-active:after{
-  content: "";
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: var(--text-color);
-  z-index: 1;
-
-}
-
-.category-item-count{
-  border-radius: 4px;
-  background-color: var(--light-bg);
-  color: var(--muted-text);
-  font-size: 14px;
-  line-height: 18px;
-  height: 18px;
-  width: 18px;
+  padding-top: clamp(var(--size-md), 2vw, var(--size-lg));
+  padding-bottom: clamp(var(--size-md), 2vw, var(--size-lg));
+  width: clamp(400px, 60vw ,800px);
 }
