--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,17 @@
  --text-color : #0f0f0f;
  --muted-text : #9a9a9a;
  --light-bg : #f2f2f2;
-  --mobile: 768px;
+  
+ --mobile: 768px;
   --tablet: 992px;
   --desktop: 1200px;
-   --rem-base: 16;
+
+  --size-xs: 0.25rem; /* 4px */
+  --size-sm: 0.5rem;  /* 8px */
+  --size-md: 1rem;    /* 16px */
+  --size-lg: 1.5rem;  /* 24px */
+  --size-xl: 2rem;    /* 32px */
+  --size-xxl: 2.5rem; /* 40px */
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -87,11 +94,15 @@ a{
 
 html{
     box-sizing: border-box;
-    font-size: clamp(0.875rem,2vw,1rem);
+    font-size: 100%;
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+body{
+  font-size: clamp(0.875rem,2vw,1rem);
 }
 
 /* input:focus {
@@ -110,33 +121,14 @@ html{
 }
 
 .icon {
-  font-size: clamp(14px, 1vw + 1rem, 18px);
+  font-size: clamp(var(--size-lg),2vw,var(--size-xl));
   color: var(--muted-text);
   vertical-align: middle;
 }
-
-.icon-sm{
-  font-size: 1.6rem;
-  color: var(--muted-text);
-  vertical-align: middle;
-}
-
-.font-sm{
-  font-size: 1.4rem;
-}
-
-.font-lg{
-  font-size: 1.8rem;
+.icon-sm {
+  font-size: clamp(var(--size-md),2vw,var(--size-lg));
 }
 
 @media (max-width: 768px ) {
-  .font-lg{
-    font-size: 1.6rem;
-  }
-  .font-sm{
-    font-size: 1.2rem;
-  }
-  .icon-sm{
-    font-size: 1.4rem
-  }
+
 }
