--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -3,7 +3,8 @@
   padding-bottom: 10px; */
 }
 .listItem{
-  padding: 0px 15px;
+  padding-left: clamp(var(--size-md),2vw,var(--size-lg));
+  padding-right: clamp(var(--size-md),2vw,var(--size-lg));
 }
 .listItem:hover{
   background-color: var(--light-bg);
@@ -13,28 +14,30 @@
 }
 .listItemWrap{
   gap: 1.4rem;
-  padding-top: clamp(1rem, 2vw, 1.25rem);
-  padding-bottom: clamp(1rem, 2vw, 1.25rem);
+  /* padding-top: clamp(var(--size-md), 2vw, var(--size-lg));
+  padding-bottom: clamp(var(--size-md), 2vw, var(--size-lg)); */
+  padding-top: clamp(0.625rem, 2vw, 0.875rem);
+  padding-bottom: clamp(0.625rem, 2vw, 0.875rem);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 2px solid var(--light-bg);
+  /* border-bottom: 2px solid var(--light-bg); */
   
 }
 .listItemLeft{
   display: flex;
-  gap: 10px;
+  gap: 0.625rem;
 }
 .listItemActive{
   background-color: var(--light-bg);
 }
 .listImgWrap{
   position: relative;
-  width: 45px;
-  height: 45px;
+  width: 2.875rem;
+  height: 2.875rem;
 }
 .itemContent{
-  padding: 5px 0;
+  /* flex: 1; */
 }
 .itemImg{
   border-radius: 10px;
@@ -54,9 +57,7 @@
     border: 3px solid white;
 }
 .itemStatusText{
-  display: block;
   color: var(--muted-text);
-  font-size: 1.2rem;
 }
 .listOptions{
   /* display: none; */
@@ -66,7 +67,24 @@
   align-items: center;
   gap: 5px;
 }
-
+.itemList{
+  display: flex;
+}
+.itemListLi:not(:first-child){
+  position: relative;
+  padding-left: 16px;
+}
+.itemListLi:not(:first-child):before{
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background-color: var(--muted-text);
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 5px;
+}
 .listOptionsItems{
   display: flex; 
   align-items: center;
@@ -74,20 +92,18 @@
   color: var(--muted-text);
   cursor: pointer;
 }
-
 .copyIcon{
   position: relative;
+  cursor: pointer;
 }
 .copyIcon:hover .copyIconText{
   transform: translate(-50%,-120%) scale(1);
 }
-
-
 .copyIconText{
   position: absolute;
   background-color: black;
   color: white;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   padding: .3rem .6rem;
   line-height: normal;
   left: 50%;
@@ -96,4 +112,17 @@
   transform: translate(-50%,-120%) scale(0);
   transition: .2s;
   transform-origin: bottom;
+  z-index: 1;
+}
+
+.itemTitle{
+  display: inline-block;
+}
+.detailsCount{
+  margin-left: .2rem;
+  background-color: var(--light-bg);
+  color: var(--muted-text);
+  padding: .2rem;
+  border-radius: .4rem;
+  font-size: clamp(0.75rem,2vw,0.875rem);
 }
