--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   --size-md: 1rem;    /* 16px */
   --size-lg: 1.5rem;  /* 24px */
   --size-xl: 2rem;    /* 32px */
-  --size-xxl: 2.5rem; /* 40px */
+  --size-2xl: 2.5rem; /* 40px */
+  --size-3xl: 3rem;   /* 48px */
 
   /* 6 10 14 18 22 26 30 */
 }
@@ -120,7 +121,7 @@ body{
 }
 
 .icon {
-  font-size: clamp(var(--size-lg),2vw,var(--size-xl));
+  font-size: clamp(var(--size-md),2vw,var(--size-lg));
   color: var(--muted-text);
   vertical-align: middle;
 }
