--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 var(--size-md);
 }
 
 .search-box{
   border-radius: .8rem;
   background-color: white;
   box-shadow: 0px 0px 20px #0000002b;
-  padding-top: clamp(var(--size-md), 2vw, var(--size-lg));
-  padding-bottom: clamp(var(--size-md), 2vw, var(--size-lg));
+  padding-top: clamp(var(--size-lg), 2vw, var(--size-xl));
+  padding-bottom: clamp(var(--size-lg), 2vw, var(--size-xl));
   width: clamp(400px, 60vw ,800px);
   overflow: hidden;
 }
