--- a/src/components/category/Category.module.css
+++ b/src/components/category/Category.module.css
@@ -47,7 +47,7 @@
 }
 
 /* .categoryItem:hover{
-  background-color: var(--body-bg);
+  background-color: var(--dark-bg);
 } */
 
 .categoryItemActive{
